feat(authentication): with JWT and middlewares
